# code

./: .gitignore  main.py  pyproject.toml
src/simple_log/: __init__.py  simple_log.py
tests/: test_simple_log.py
