[project]
name = "simple-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "寰愭鍙?, email = "'blzs818@qq.com'" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
simple-log = "simple_log:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
